# OZ_CodingSchool

./: .gitignore
01/: .gitignore
01/templates/: bookmark_detail.html  movies.html
Desktop/djangostudy/blog_api/: pyproject.toml
Django/01/: pyproject.toml
Django/01/bookmark/: admin.py  models.py  views.py
Django/01/bookmark/migrations/: 0001_initial.py
Django/01/config/: settings.py  urls.py
Django/01/templates/: book_detail.html  book_list.html  bookmark_list.html  gugu.html  movie.html
Django/02/: .gitignore  pyproject.toml
Django/02/config/: settings.py  urls.py
Django/02/templates/: todo_info.html  todo_list.html
Django/02/templates/registration/: login.html  signup.html
Django/02/todo/: admin.py  models.py  views.py
Django/02/todo/migrations/: 0001_initial.py
Django/02/users/: views.py
